NetBSD Problem Report #50309

From brad.harder@gmail.com  Wed Oct  7 01:01:51 2015
Return-Path: <brad.harder@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5DFF8A567D
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  7 Oct 2015 01:01:51 +0000 (UTC)
Message-Id: <CABfrOT_Xz7xC9g=7yMoGxPBwY9pMvb1Z6P_ABKoggaaFSXvJvw@mail.gmail.com>
Date: Tue, 6 Oct 2015 18:01:49 -0700
From: bch <brad.harder@gmail.com>
Reply-To:
To: gnats-bugs@netbsd.org
Subject: filemon(4) breaks running system

>Number:         50309
>Category:       kern
>Synopsis:       filemon(4) breaks running system
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 07 01:05:00 +0000 2015
>Closed-Date:    Sun Nov 22 01:39:05 +0000 2015
>Last-Modified:  Sun Nov 22 01:39:05 +0000 2015
>Originator:     bch <brad.harder@gmail.com>
>Release:        NetBSD 7.99.21
>Organization:
	method logic digital
>Environment:
System: NetBSD strathcona 7.99.21 NetBSD 7.99.21 (GENERIC) #70: Tue
Oct 6 17:27:12 PDT 2015
root@strathcona:/usr/obj/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
	Utilizing filemon(4) sets environemnt (entire OS) to state where
env(1) no longer works.

shell:
bash-4.3$ env ls
env: ls: Undefined error: 0

filemon output:
F 98 2015
R 2015 /usr/lib/libgcc_s.so.1
R 2015 /usr/lib/libc.so.12
R 2015 /usr/share/nls/nls.alias
R 2015 /usr/share/nls/C/libc.cat
X 2015 126

>How-To-Repeat:
	Ref code in filemon(4) manpage will enter this state.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sat, 21 Nov 2015 23:15:45 +0000
Responsible-Changed-Why:
I'm looking into it.


From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50309 CVS commit: src/sys/dev/filemon
Date: Sun, 22 Nov 2015 01:20:52 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Sun Nov 22 01:20:52 UTC 2015

 Modified Files:
 	src/sys/dev/filemon: filemon_wrapper.c

 Log Message:
 Fix return-code handling for execve and chdir wrappers.

 Fixes PR kern/50309


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/sys/dev/filemon/filemon_wrapper.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Sun, 22 Nov 2015 01:39:05 +0000
State-Changed-Why:
Fix committed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.