Fix return-code handling for execve and chdir wrappers.

Fixes PR kern/50309